# rag-system

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/documents/: ims-manual.md
data/documents/manuals_docs/: ims-manual.md
docs/: ims-manual.md
src/: chunker.py  ingest.py  query.py  query_translator.py
src/core/: config.py  database.py  embeddings.py  utils.py
src/core/llm/: base.py  factory.py  llm_chat_models.py
src/generation/: generator.py
src/ingestion/: chunker.py  ingest.py  types.py
src/prompts/: system_prompts.py
src/retrieval/: query.py  query_translator.py
src/routing/: base.py  data_source.py  query_router.py
src/schemas/: query_context.py
