[tool.poetry]
name = "rag-system"
version = "0.1.0"
description = "RAG system using ChromaDB and sentence transformers"
authors = ["Muhammad Furqan <furqanamjad150@gmail.com>"]
packages = [{ include = "*" }]

[tool.poetry.dependencies]
python = "^3.10"
chromadb = "^0.5.0"
sentence-transformers = "^2.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"